--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-  "name": "passport-atlassian-crowd",
-  "version": "0.0.2",
-  "description": "Password authentication strategy using Atlassian Crowd for Passport",
-  "author": { "name": "Andreas Knecht", "email": "knecht.andreas@gmail.com"},
-  "repository": {
-    "type": "git",
-    "url": "https://bitbucket.org/knecht_andreas/passport-atlassian-crowd.git"
-  },
-  "main": "./lib/passport-atlassian-crowd",
-  "dependencies": {
-    "pkginfo": "0.2.x",
-    "passport": "~0.1.1"
-  },
-  "engines": { "node": ">= 0.4.0" },
-  "licenses": [ {
-    "type": "MIT",
-    "url": "http://www.opensource.org/licenses/MIT" 
-  } ],
-  "keywords": ["passport", "atlassian", "crowd", "auth", "authn", "authentication"]
+    "name":"passport-atlassian-crowd",
+    "version":"0.0.3",
+    "description":"Password authentication strategy using Atlassian Crowd for Passport",
+    "author":{
+        "name":"Andreas Knecht",
+        "email":"knecht.andreas@gmail.com"
+    },
+    "contributors":[
+        {
+            "name":"Frank Febbraro"
+        }
+    ],
+    "repository":{
+        "type":"git",
+        "url":"https://bitbucket.org/knecht_andreas/passport-atlassian-crowd.git"
+    },
+    "main":"./lib/passport-atlassian-crowd",
+    "dependencies":{
+        "pkginfo":"0.2.x",
+        "passport":"~0.1.1"
+    },
+    "engines":{
+        "node":">= 0.4.0"
+    },
+    "licenses":[
+        {
+            "type":"MIT",
+            "url":"http://www.opensource.org/licenses/MIT"
+        }
+    ],
+    "keywords":["passport", "atlassian", "crowd", "auth", "authn", "authentication"]
 }
