--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name":"passport-atlassian-crowd",
-    "version":"0.0.4",
+    "version":"0.0.5",
     "description":"Password authentication strategy using Atlassian Crowd for Passport",
     "author":{
         "name":"Andreas Knecht",
@@ -8,7 +8,8 @@
     },
     "contributors":[
         {
-            "name":"Frank Febbraro"
+            "name":"Frank Febbraro",
+	    "name":"Jeffrey Mealo"
         }
     ],
     "repository":{
