--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "main":"./lib/passport-atlassian-crowd",
     "dependencies":{
         "pkginfo":"0.2.x",
-        "passport":"~0.1.1"
+        "passport-strategy":"1.x.x"
     },
     "engines":{
         "node":">= 0.4.0"
